# screenwriting

./: .gitignore  pyproject.toml  screenwriting.py  setup.py
screenwriting/: __init__.py  core.py
screenwriting.egg-info/: PKG-INFO  SOURCES.txt
