[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "screenwriting"
version = "0.1.0"
description = "A screenplay parser and formatter supporting FDX and plaintext."
authors = [
    { name="Your Name", email="you@example.com" }
]
dependencies = ["pydantic>=1.10"]
requires-python = ">=3.7"